# mini-qwen-py

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  repl.py
src/miniqwen/: model.py  transformer.py  vocab.py
